@@ -12,8 +12,9 @@ SUBDIRS += \
 !CONFIG(standalone_package) {
     SUBDIRS += JavaScriptCore/jsc.pro
 
+    !symbian: SUBDIRS += WebKitTools/DumpRenderTree/qt/DumpRenderTree.pro
+
     !win32:!symbian {
-        SUBDIRS += WebKitTools/DumpRenderTree/qt/DumpRenderTree.pro
         SUBDIRS += WebKitTools/DumpRenderTree/qt/ImageDiff.pro
         SUBDIRS += WebKitTools/DumpRenderTree/qt/TestNetscapePlugin/TestNetscapePlugin.pro
     }
